--- a/07-Backend-MVC/CarritoCompras/views/header.ejs
+++ b/07-Backend-MVC/CarritoCompras/views/header.ejs
@@ -15,12 +15,8 @@
         <ul class="dropdown-menu">
           <li class="nav-item active"><a class="nav-link" href="/busqueda">DOAJ</a></li>
           <li class="nav-item active"><a class="nav-link"  href="/busquedaSpringer">Springer</a></li>
-          <li class="nav-item active"><a  class="nav-link" href="/busquedaScopus">Scopus</a></li>
           <li class="nav-item active"><a class="nav-link" href="/busquedaArxiv">Arxiv</a></li>
         </ul>
-      </li>
-      <li class="nav-item active">
-        <a class="nav-link" href="/busqueda"><h5>Busqueda</h5> </a>
       </li>
       <li class="dropdown">
         <a class="nav-link" data-toggle="dropdown" href="/bibliotecaUser"><h5>Biblioteca</h5> <span class="caret"></span></a>
@@ -30,7 +26,7 @@
         </ul>
       </li>
       <li class="nav-item active">
-        <a class="nav-link" href="/crearMisArticulos"><h5>Crear mis articulos </h5></a>
+        <a class="nav-link" href="/AnadirArticulos"><h5>Añadir artículos </h5></a>
       </li>
       <li class="nav-item active">
         <a class="nav-link" href="/logout"><h5>Salir </h5></a>
