--- a/07-Backend-MVC/CarritoCompras/views/UsuarioGestion/login.ejs
+++ b/07-Backend-MVC/CarritoCompras/views/UsuarioGestion/login.ejs
@@ -1,13 +1,80 @@
-<h1>Login</h1>
-<form action="/VerUsuario" method="get">
 
-  <label for="email">Your email address?</label>
-  <input name="email" type="text"/>
-  <br/>
+<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+  <ol class="carousel-indicators">
+    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+  </ol>
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img class="d-block w-100" src="images\springer.png" alt="First slide">
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="images\arxiv.png" alt="Second slide">
+    </div>
+    <div class="carousel-item ">
+      <img class="d-block w-100" src="images\DOAJ.png" alt="Third slide">
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="images\mrdlib.png" alt="four slide">
+    </div>
+  </div>
+  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
+<br>
+<br>
 
-  <label for="password">Your safe word?</label>
-  <input name="password" type="password"/>
-  <br/>
+<div class="row">
 
-  <input type="submit"/>
-</form>
+  <div class="col-sm-1"></div>
+  <div class="col-sm-8">
+
+    <font color="#01549b"><h1>Login</h1></font>
+    <form action="/VerUsuario" method="get" >
+
+  <div class="form-group row">
+    <label for="email" class="col-1 col-form-label"><h5><b>Email:</b></h5></label>
+
+      <input class="form-control" type="email"
+             placeholder="Ingresa tu email"
+             name="email"
+             id="email"
+             required
+      >
+    </div>
+
+  <div class="form-group row">
+    <label for="password" class="col-1 col-form-label"><h5><b>Contraseña:</b></h5></label>
+
+      <input class="form-control" type="password"
+             placeholder="Ingresa tu contraseña"
+             name="password"
+             id="password"
+             required
+      >
+
+  </div>
+
+  <input class="btn btn-outline-success"type="submit"/>
+      <a href="/signup">
+        <button type="button" class="btn btn-primary">
+          Si aun no tienes cuenta regístrate!!
+        </button>
+      </a>
+  </form>
+
+  </div>
+  <div class="col-sm-1"></div>
+
+</div>
+
+
+
